# alphabeta

./: AlphaBeta.hs  LICENSE  Main.hs  MiniMax.hs  TicTacToe.hs  alphabeta.cabal  log.txt
